remove form element

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <form>
+  
         <div>
         <label for "tempConverter">Please enter the temperature to convert</label>
-        <input type="text" id="tempConverter" name="name" placeholder="Celsius or Farenheit">
+        <input type="text" id="converter" name="name" placeholder="Celsius or Farenheit">
         </div>
         <div>
             <button>Submit</button>
@@ -30,6 +30,6 @@
         <div>
           <button type="submit">Submit</button>
         </div>
-    </form>
+    
 </body>
 </html>
